feat: cosmetic GUI - 1