@@ -42,7 +42,7 @@ public class CosmeticCmdTabComplete implements TabCompleter {
                         else
                             new PlayerCosmeticData(player).getBackCosmetics().forEach(cosmetic -> cosmeticNames.add(cosmetic.name()));
 
-                        cosmeticNames.remove("NONE");
+                        cosmeticNames.remove("");
 
                         return cosmeticNames;
                     } else if (List.of("모자", "hat").contains(args[1].toLowerCase())) {
@@ -53,7 +53,7 @@ public class CosmeticCmdTabComplete implements TabCompleter {
                         else
                             new PlayerCosmeticData(player).getHatCosmetics().forEach(cosmetic -> cosmeticNames.add(cosmetic.name()));
 
-                        cosmeticNames.remove("NONE");
+                        cosmeticNames.remove("");
 
                         return cosmeticNames;
                     } else if (List.of("왼손", "offhand").contains(args[1].toLowerCase())) {
@@ -64,36 +64,34 @@ public class CosmeticCmdTabComplete implements TabCompleter {
                         else
                             new PlayerCosmeticData(player).getOffhandCosmetics().forEach(cosmetic -> cosmeticNames.add(cosmetic.name()));
 
-                        cosmeticNames.remove("NONE");
+                        cosmeticNames.remove("");
 
                         return cosmeticNames;
                     }
                 } else if (player.isOp() && List.of("목록", "list", "제거", "remove").contains(args[0].toLowerCase()))
                     return null;
-            } else if (List.of("주기", "give", "뺏기", "take").contains(args[0].toLowerCase())) {
-                if (player.isOp()) {
-                    if (List.of("등", "back").contains(args[1].toLowerCase())) {
-                        List<String> cosmeticNames = new ArrayList<>();
-                        Arrays.asList(Cosmetic.BACK.values()).forEach(cosmetic -> cosmeticNames.add(cosmetic.name()));
+            } else if (List.of("주기", "give", "뺏기", "take").contains(args[0].toLowerCase()) && player.isOp()) {
+                if (List.of("등", "back").contains(args[1].toLowerCase())) {
+                    List<String> cosmeticNames = new ArrayList<>();
+                    Arrays.asList(Cosmetic.BACK.values()).forEach(cosmetic -> cosmeticNames.add(cosmetic.name()));
 
-                        cosmeticNames.remove("NONE");
+                    cosmeticNames.remove("");
 
-                        return cosmeticNames;
-                    } else if (List.of("모자", "hat").contains(args[1].toLowerCase())) {
-                        List<String> cosmeticNames = new ArrayList<>();
-                        Arrays.asList(Cosmetic.HAT.values()).forEach(cosmetic -> cosmeticNames.add(cosmetic.name()));
+                    return cosmeticNames;
+                } else if (List.of("모자", "hat").contains(args[1].toLowerCase())) {
+                    List<String> cosmeticNames = new ArrayList<>();
+                    Arrays.asList(Cosmetic.HAT.values()).forEach(cosmetic -> cosmeticNames.add(cosmetic.name()));
 
-                        cosmeticNames.remove("NONE");
+                    cosmeticNames.remove("");
 
-                        return cosmeticNames;
-                    } else if (List.of("왼손", "offhand").contains(args[1].toLowerCase())) {
-                        List<String> cosmeticNames = new ArrayList<>();
-                        Arrays.asList(Cosmetic.OFFHAND.values()).forEach(cosmetic -> cosmeticNames.add(cosmetic.name()));
+                    return cosmeticNames;
+                } else if (List.of("왼손", "offhand").contains(args[1].toLowerCase())) {
+                    List<String> cosmeticNames = new ArrayList<>();
+                    Arrays.asList(Cosmetic.OFFHAND.values()).forEach(cosmetic -> cosmeticNames.add(cosmetic.name()));
 
-                        cosmeticNames.remove("NONE");
+                    cosmeticNames.remove("");
 
-                        return cosmeticNames;
-                    }
+                    return cosmeticNames;
                 }
             }
         } else if (args.length == 4) {
